--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dev = [
   "ruff>=0.3",
   "mypy>=1.10",
   "pytest>=7.0",
+  "pytest-asyncio>=0.23",
   "build>=1.0",
   "twine>=4.0",
 ]
@@ -38,3 +39,8 @@ package-dir = { "" = "src" }
 
 [tool.setuptools.packages.find]
 where = ["src"]
+
+[tool.pytest.ini_options]
+addopts = "-q"
+testpaths = ["tests"]
+pythonpath = ["src"]
